--- a/myitem_0.0.1/locale/en/locale.cfg
+++ b/myitem_0.0.1/locale/en/locale.cfg
@@ -1,7 +1,11 @@
 [item-name]
 my-coin = My Coin
-
+coin-ore = Coin Material
 
 [item-description]
 my-coin = A useless item
-
+coin-ore = resources for test
+[autoplace-control-names]
+coin-ore = Coin Material
+[entity-name]
+coin-ore = Gold mime
