--- a/myitem_0.0.1/locale/zh-CN/locale.cfg
+++ b/myitem_0.0.1/locale/zh-CN/locale.cfg
@@ -1,7 +1,11 @@
 [item-name]
 my-coin = 硬币
-
+coin-ore = 硬币矿
 
 [item-description]
 my-coin = 不值钱的硬币
-
+coin-ore = 能提炼出铜铁矿
+[autoplace-control-names]
+coin-ore = 硬币矿
+[entity-name]
+coin-ore = 硬币矿
