add long chest 8slot

--- a/myitem_0.0.1/locale/zh-CN/locale.cfg
+++ b/myitem_0.0.1/locale/zh-CN/locale.cfg
@@ -1,11 +1,21 @@
 [item-name]
 my-coin = 硬币
 coin-ore = 硬币矿
+cargo-platform-v = 横月台
+cargo-platform-h = 竖月台
 
 [item-description]
 my-coin = 不值钱的硬币
 coin-ore = 能提炼出铜铁矿
+cargo-platform-v = 横月台
+cargo-platform-h = 竖月台
 [autoplace-control-names]
 coin-ore = 硬币矿
 [entity-name]
 coin-ore = 硬币矿
+cargo-platform-v = 横月台
+cargo-platform-h = 竖月台
+[technology-description]
+long-chest-tech = 8个箱位的装卸货月台
+[technology-name]
+long-chest-tech = 月台装卸
