change to express mode

--- a/myitem_0.0.1/locale/en/locale.cfg
+++ b/myitem_0.0.1/locale/en/locale.cfg
@@ -3,12 +3,15 @@ my-coin = My Coin
 coin-ore = Coin Material
 cargo-platform-v = Vertical platform
 cargo-platform-h = Horizontal platform
+iron-plate5 = 5 pcs iron
+copper-plate5 = 5 pcs copper
 [item-description]
 my-coin = A useless item
 coin-ore = resources for test
 cargo-platform-v = Vertical platform
 cargo-platform-h = Horizontal platform
-
+iron-plate5 = 5 pcs iron plate in package
+copper-plate5 = 5 pcs copper plate in package
 [autoplace-control-names]
 coin-ore = Coin Material
 [entity-name]
@@ -19,3 +22,7 @@ cargo-platform-h = Horizontal platform
 long-chest-tech = platform technology
 [technology-description]
 long-chest-tech = platform loading/unloading
+pick-iron-plate5= pick 5 pcs Iron plate
+unpick-iron-plate5= unpick 5 pcs Iron plate
+pick-copper-plate5= pick 5 pcs Copper plate
+unpick-copper-plate5= unpick 5 pcs Copper plate
